--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 !/.config
 !/.config/git
 !/.config/git/**
+!/.config/home-manager
+!/.config/home-manager/**
 !/.config/nvim
 !/.config/nvim/**
 
